# vk_hello_triangle

./: .gitignore  README.md  envsetup.sh  meson.build  native-windows.ini  shell.nix
comptime/: image_decoder.c
src/: draw.c  draw.h  main.c  main_window.c  main_window.h  math_types.c  math_types.h  util.c  util.h  vulkan_setup.c  vulkan_setup.h
src/vulkan_setup/: buffers.c  buffers.h  command_buffer.c  command_buffer.h  descriptor_sets.c  descriptor_sets.h  device.c  device.h  device_setup.c  device_setup.h  framebuffers.c  framebuffers.h  graphics_card.c  graphics_card.h  images.c  images.h  pipeline.c  pipeline.h  queues.c  queues.h  render_pass.c  render_pass.h  swapchain.c  swapchain.h  synchronization.c  synchronization.h  vertex_buffer.c
